; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/xen/console/extr_xen_console.c_xencons_cnprobe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/xen/console/extr_xen_console.c_xencons_cnprobe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.consdev = type { i32, i32 }

@CN_REMOTE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s0\00", align 1
@driver_name = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.consdev*)* @xencons_cnprobe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xencons_cnprobe(%struct.consdev* %0) #0 {
  %2 = alloca %struct.consdev*, align 8
  store %struct.consdev* %0, %struct.consdev** %2, align 8
  %3 = call i32 (...) @xen_domain()
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %15

6:                                                ; preds = %1
  %7 = load i32, i32* @CN_REMOTE, align 4
  %8 = load %struct.consdev*, %struct.consdev** %2, align 8
  %9 = getelementptr inbounds %struct.consdev, %struct.consdev* %8, i32 0, i32 1
  store i32 %7, i32* %9, align 4
  %10 = load %struct.consdev*, %struct.consdev** %2, align 8
  %11 = getelementptr inbounds %struct.consdev, %struct.consdev* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i8*, i8** @driver_name, align 8
  %14 = call i32 @sprintf(i32 %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %13)
  br label %15

15:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @xen_domain(...) #1

declare dso_local i32 @sprintf(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
